objects/ESC_MilestoneAlertConfigSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>X1stLevelColor__c</fullName>
        <label>1stLevelColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1stLevelThreshold__c</fullName>
        <label>1stLevelThreshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ndLevelColor__c</fullName>
        <label>2ndLevelColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2ndLevelThreshold__c</fullName>
        <label>2ndLevelThreshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rdLayerColor__c</fullName>
        <label>3rdLayerColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rdLevelThreshold__c</fullName>
        <label>X3rdLevelThreshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MilestoneAlertConfigSetting</label>
</CustomObject>